--- a/pom.xml
+++ b/pom.xml
@@ -2,55 +2,49 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
-    </properties>
-    </dependencies>
-            </plugin>
-    </build>
-        </plugins>
-            </plugin>
-                </configuration>
-                    <mainClass>org.example.kuet_library_management_desktop.Launcher</mainClass>
-                <configuration>
-                <version>0.0.8</version>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <groupId>org.openjfx</groupId>
-            <plugin>
+  <modelVersion>4.0.0</modelVersion>
+
+  <groupId>org.example</groupId>
+  <artifactId>kuet-library-management-desktop</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.release>17</maven.compiler.release>
     <javafx.version>21.0.6</javafx.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>${javafx.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
+  </dependencies>
 
+  <build>
     <plugins>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-          <source>${maven.compiler.source}</source>
-        </configuration>
-        </configuration>
-          <target>${maven.compiler.target}</target>
-      </plugin>
-      </plugin>
-        </configuration>
-          <mainClass>org.example.kuet_library_management_desktop.Launcher</mainClass>
-          <mainClass>org.example.kuet_library_management_desktop.Launcher</mainClass>
-    <plugins>
-          <mainClass>org.example.kuet_library_management_desktop.Launcher</mainClass>
-          <mainClass>org.example.kuet_library_management_desktop.Launcher</mainClass>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <mainClass>org.example.kuet_library_management_desktop.Launcher</mainClass>
-          <mainClass>org.example.kuet_library_management_desktop.Launcher</mainClass>
-          <mainClass>org.example.kuet_library_management_desktop.Launcher</mainClass>
+          <release>17</release>
+        </configuration>
+      </plugin>
 
       <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>org.example.kuet_library_management_desktop/org.example.kuet_library_management_desktop.Launcher</mainClass>
+          <mainClass>org.example.kuet_library_management_desktop.Launcher</mainClass>
         </configuration>
       </plugin>
     </plugins>
