--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@ target/
 !**/src/test/**/target/
 .kotlin
 
+### Database ###
+*.db
+*.db-journal
+library.db
+
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/
 *.iws
 *.iml
 *.ipr
@@ -37,3 +39,16 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+### Maven ###
+.mvn/
+mvnw
+mvnw.cmd
+
+### Logs ###
+*.log
+
+### Temporary files ###
+*.tmp
+*.bak
+*~
